fix: 修复了不能打开jira链接

--- a/templates/commit.hbs
+++ b/templates/commit.hbs
@@ -27,7 +27,7 @@
 {{~#if references~}}
   , Jira:
   {{~#each references}}
-    [GC-{{this.issue}}](jira.blacklake.tech/GC-{{this.issue}})
+    [GC-{{this.issue}}](http://jira.blacklake.tech/GC-{{this.issue}})
   {{~else}}
   {{/each}}
 {{~/if}}
